<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.tommasoberlose.anotherwidget.ui.activities.settings.BackupRestoreActivity">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="0dp"
        android:id="@+id/toolbar"
        app:cardBackgroundColor="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:layout_marginTop="2dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/action_back"
                app:tint="@color/colorPrimaryText"
                android:src="@drawable/round_arrow_back_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:text="@string/settings_title_backup_restore"
                android:gravity="center"
                style="@style/AnotherWidget.Main.Title"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnotherWidget.Main.Subtitle"
                android:textSize="14sp"
                android:paddingTop="20dp"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:text="@string/backup_activity_subtitle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:id="@+id/action_export"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:src="@drawable/round_save_24"
                    app:tint="@color/colorPrimaryText"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AnotherWidget.Settings.Title"
                        android:text="@string/backup_export"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AnotherWidget.Settings.Subtitle"
                        android:text="@string/backup_export_subtitle"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:id="@+id/action_restore"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:src="@drawable/round_update"
                    app:tint="@color/colorPrimaryText"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AnotherWidget.Settings.Title"
                        android:text="@string/backup_restore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AnotherWidget.Settings.Subtitle"
                        android:text="@string/backup_restore_subtitle"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:textSize="14sp"
                android:paddingStart="64dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:id="@+id/status"
                android:textColor="@color/colorAccent"
                android:letterSpacing="0"
                android:fontFamily="@font/google_sans_bold"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
